syntax = "proto3";

package x_clone.backend.protobuf.apis.profiles;

import "google/protobuf/empty.proto";
import "page-request.proto";

option go_package = "generated/";

service ProfilesAPI {
  rpc Ping(google.protobuf.Empty) returns (google.protobuf.Empty);

  rpc SearchProfiles(SearchProfilesRequest) returns (SearchProfilesResponse);

  rpc GetProfilePreviews(GetProfilePreviewsRequest) returns (GetProfilePreviewsResponse);
}

message SearchProfilesRequest {
  string query = 1;

  x_clone.backend.protobuf.PageRequest page_request = 2;
}

message SearchProfilesResponse {
  repeated ProfilePreview profile_previews = 1;
}

message GetProfilePreviewsRequest {
  repeated int32 ids = 1;
}

message GetProfilePreviewsResponse {
  repeated ProfilePreview profile_previews = 1;
}

message ProfilePreview {
  int32 id = 1;

  string name     = 2;
  string username = 3;
}
